[package]
name = "pwn_cli"
version = "0.1.0"
authors = ["Maximilian Lehrbaum <maximilian@lehrbaum.dev>"]
license = "GPL-3.0-only"
description = "CLI for pwn library"
repository = "https://github.com/lehrbaumm/rustpwn"
readme = "../README.md"

edition = "2018"
keywords = ["security", "ctf"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "pwn"
path = "src/main.rs"
doc = true

[dependencies]

[dependencies.pwn]
version = "~0.1.0"
path = "../pwn"
default-features = false
