[package]
name = "pwnd"
version = "0.1.2"
authors = ["Maximilian Lehrbaum <maximilian@lehrbaum.dev>"]
license = "GPL-3.0-only"
description = "Rust Library for CTF Binary Challenges"
homepage = "https://github.com/lehrbaumm/rustpwn"
repository = "https://github.com/lehrbaumm/rustpwn.git"
readme = "../README.md"

edition = "2018"
keywords = ["security", "ctf", "binary", "exploit_development"]
categories = ["network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
async-trait = "0.1.51"
bytes = "1.1.0"
tokio = { version = "1.13.0", features = ["io-util", "rt-multi-thread", "process", "net", "macros", "time"] }
tracing = "0.1.29"
