[package]
name = "pwnd_cli"
version = "0.1.0"
authors = ["Maximilian Lehrbaum <maximilian@lehrbaum.dev>"]
license = "GPL-3.0-only"
description = "CLI for pwnd library"
repository = "https://github.com/lehrbaumm/rustpwn"
readme = "../README.md"

edition = "2018"
keywords = ["security", "ctf"]
categories = ["command-line-utilities"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "pwnd"
path = "src/main.rs"
doc = true

[dependencies]
tui = { version = "0.14", default-features = false, features = ['crossterm'] }
tokio = { version = "1", features = ["full"] }
crossterm = "0.18"
heim = "0.0.11"
winapi = "0.3.9"
ctrlc = "3.1.7"
exitcode = "1.1.2"

[dependencies.pwnd]
version = "~0.1.0"
path = "../pwnd"
default-features = false
