[package]
name = "pwnd_cli"
version = "0.1.1"
authors = ["Maximilian Lehrbaum <maximilian@lehrbaum.dev>"]
license = "GPL-3.0-only"
description = "CLI for pwnd library"
repository = "https://github.com/lehrbaumm/rustpwn"
readme = "../README.md"

edition = "2018"
keywords = ["security", "ctf"]
categories = ["command-line-utilities"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "pwnd"
path = "src/main.rs"
doc = true

[dependencies]
tokio = { version = "1.13.0", features = ["rt-multi-thread", "macros"] }

[dependencies.pwnd]
version = "~0.1.0"
path = "../pwnd"
default-features = false
